--- a/src/components/Cards/CardMiddle/CardMiddle.scss
+++ b/src/components/Cards/CardMiddle/CardMiddle.scss
@@ -3,7 +3,6 @@
 .middle-card {
     border-radius: 10px;
     border: 1px solid $color-grey;
-    font-family: $font-helvetica-neue;
 }
 
 .bottom-section {
@@ -17,7 +16,7 @@
     font-size: 20px;
 }
 
-.cost-likes-container {
+.price-like-container {
     margin-top: 8px;
     display: flex;
     justify-content: space-between;
