--- a/src/pages/Product/components/PriceCard/PriceCard.scss
+++ b/src/pages/Product/components/PriceCard/PriceCard.scss
@@ -20,3 +20,10 @@
         font-weight: 500;
     }
 }
+
+@media (max-width: 850px) {
+    .price-card {
+        padding: 16px 24px 16px 16px;
+        background-color: inherit;
+    }
+}
