--- a/src/pages/Product/components/ProductPriceBlock/ProductPriceBlock.scss
+++ b/src/pages/Product/components/ProductPriceBlock/ProductPriceBlock.scss
@@ -13,11 +13,6 @@
     .buy-button {
         width: 321px;
         height: 56px;
-        border-radius: 10px;
-        border: 2px solid $color-dark-2;
-        background-color: inherit;
-
-        color: $color-dark-2;
         text-align: center;
         font-size: 16px;
         font-weight: 700;
@@ -27,12 +22,6 @@
     .bid-button {
         width: 170px;
         height: 56px;
-        border-radius: 10px;
-        background: $color-purple;
-        color: $color-white;
-        border: 0;
-
-        color: $color-white;
         text-align: center;
         font-size: 16px;
         font-weight: 700;
@@ -68,7 +57,7 @@
         span {
             color: $color-black;
             opacity: 0.7;
-            
+
             font-size: 14px;
             font-weight: 400;
         }
@@ -86,5 +75,11 @@
         .bid-button {
             width: 100%;
         }
+    }
+}
+
+@media (max-width: 425px) {
+    .product-price-block-top {
+        flex-direction: column;
     }
 }
