Add Cards in Creators

--- a/src/pages/Creators/CardsRender/CardsRender.scss
+++ b/src/pages/Creators/CardsRender/CardsRender.scss
@@ -1,7 +1,7 @@
 $font-helvetica-neue: "Helvetica Neue";
 $color-black: var(--black, #232632);
 
-.card-long-render {
+.card-small-render {
     display: inline-flex;
     flex-direction: column;
     flex-wrap: wrap;
