--- a/src/components/Cards/CardSmall/components/UserInfo/UserInfo.scss
+++ b/src/components/Cards/CardSmall/components/UserInfo/UserInfo.scss
@@ -14,7 +14,7 @@
         height: 56px;
         flex-shrink: 0;
         border-radius: 56px;
-        background: $color-l;
+        background: $color-grey-light;
     }
 
     .button {
