--- a/src/pages/Creators/CardsRender/CardsRender.scss
+++ b/src/pages/Creators/CardsRender/CardsRender.scss
@@ -2,7 +2,7 @@
     display: inline-flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 100%;
+    width: 1140px;
     height: auto;
     gap: 16px;
     align-items: center;
