--- a/src/pages/Creators/CardsRender/HeaderCardSmall/HeaderCardSmall.scss
+++ b/src/pages/Creators/CardsRender/HeaderCardSmall/HeaderCardSmall.scss
@@ -4,7 +4,7 @@
     display: inline-flex;
     align-items: center;
     flex-direction: row;
-    width: 1140px;
+    width: 100%;
 
     .text {
         color: $color-black;
