--- a/src/components/Cards/CardSmall/CardSmall.scss
+++ b/src/components/Cards/CardSmall/CardSmall.scss
@@ -3,7 +3,7 @@
 .card-small {
     display: inline-flex;
     flex-Direction: row;
-    width: 1140px;
+    width: 100%;
     height: 88px;
     flex-shrink: 0;
     border-radius: 10px;
