complete LogIn page + fix some components

--- a/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
+++ b/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
@@ -2,7 +2,7 @@
 
 .left-block {
     width: 450px;
-    margin: 0 auto;
+    margin: 0 110px 0 auto;
 }
 
 fieldset {
@@ -19,7 +19,6 @@ fieldset legend {
     text-align: left;
     font-family: $font-helvetica-neue;
     font-size: 12px;
-    font-style: normal;
     font-weight: 500;
     line-height: 14px;
     color: $color-grey-3;
@@ -157,6 +156,6 @@ fieldset legend {
 }
 
 .down {
-    margin: 40px auto;
+    margin: 40px auto 120px auto;
     text-align: center;
 }
