--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,8 +3,8 @@
 .footer {
     display: inline-flex;
     flex-direction: row;
-    width: 100%;
-    height: 610px;
+    justify-content: center;
+    width: 100%;    
     flex-shrink: 0;
     z-index: 2;
 
