--- a/src/components/CollectionsHeader/CollectionsHeader.scss
+++ b/src/components/CollectionsHeader/CollectionsHeader.scss
@@ -5,47 +5,61 @@
     margin-bottom: 60px;
     display: flex;
     gap: 16px;
-}
 
-.search-container {
-    display: flex;
-    align-items: center;
-    border: 2px solid $color-black-default;
-    border-radius: 10px;
-    padding: 16px;
-    min-width: 480px;
-}
 
-.search-input::placeholder {
-    font-size: 14px;    
-}
+    .search-container {
+        display: flex;
+        align-items: center;
+        border: 2px solid $color-black-default;
+        border-radius: 10px;
+        padding: 16px;
+        min-width: 480px;
 
-.search-input {
-    flex: 1;
-    border: none;
-    outline: none;
-}
+        .search-input::placeholder {
+            font-size: 14px;
+        }
 
-.collection-header-section button {
-    font-size: 20px;
-    display: flex;
-    padding: 8px;
-    width: 100%;
-    gap: 10px;
-    align-items: center;
-    justify-content: center;
-    background-color: $color-grey;
-    border-radius: 10px;
-    font-weight: 400;
-    border: none;
-    cursor: pointer;
-}
+        .search-input {
+            flex: 1;
+            border: none;
+            outline: none;
+        }
+    }
 
-.switches {
-    display: flex;
-    gap: 8px;
-}
+    .button-box {
+        width: 100%;
+        gap: 10px;
 
-.switches button {
-    padding: 8px 16px;
+        .button {
+            padding: 8px;
+            display: flex;
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+            background-color: $color-grey;
+            border-radius: 10px;
+            border: none;
+            cursor: pointer;
+
+            &.dropdown {
+                flex-direction: row-reverse;
+            }
+
+            .text {
+                font-size: 20px;
+                font-weight: 400;
+            }
+        }
+    }
+
+
+    .switches {
+        display: flex;
+        gap: 8px;
+
+        .button {
+            padding: 8px 16px;
+        }
+    }
 }
