--- a/src/pages/Product/components/ProductActionItem/ProductActionItem.scss
+++ b/src/pages/Product/components/ProductActionItem/ProductActionItem.scss
@@ -1,4 +1,4 @@
-.product-action-item {
+.button {
     gap: 10px;
     display: flex;
     align-items: center;
@@ -8,7 +8,7 @@
     outline: none;
     line-height: 22px;
 
-    svg {
+    .svg {
         height: 18px;
         width: 18px;
     }
