Added links and card to profiles

--- a/src/components/Cards/CardMiddle/CardMiddle.scss
+++ b/src/components/Cards/CardMiddle/CardMiddle.scss
@@ -1,5 +1,12 @@
 @import '@src/variables';
 
+a:active,
+a:hover,
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .bottom-section {
     display: flex;
     flex-direction: column;
