--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -1,5 +1,9 @@
 .product-page {
     padding: 0 150px;
+
+    .market-place-section {
+        margin-bottom: 120px;
+    }
 }
 
 @media (max-width: 850px) {
