added new copmonents

--- a/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
+++ b/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
@@ -48,22 +48,13 @@ fieldset legend {
     color: $color-red;
 }
 
-.purple-color {
-    color: $color-purple;
+.text-down {
+    margin: 40px auto 120px auto;
+    text-align: center;
 }
 
-.text-forget {
-    color: $color-grey-3;
-    font-family: $font-helvetica-neue;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 22px;
-}
 
-.button {
-    background-color: $color-white;
-    border: 0px;
-}
+
 
 .button-fill {
     margin-top: 32px;
@@ -84,54 +75,8 @@ fieldset legend {
     }
 }
 
-.continue {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 40px;
-
-    .line {
-        margin-top: 6px;
-    }
-
-    .text-continue {
-        margin-top: -6px;
-        font-family: $font-helvetica-neue;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 26px;
-        color: #232632;
-    }
-
-}
-
-.extra-auto-login {
-    display: flex;
-    justify-content: space-between;
-    gap: 16px;
-    margin-top: 40px;
-
-    .butt {
-        display: flex;
-        width: 100%;
-        padding: 12px 8px;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        border-radius: 10px;
-        border: 0;
 
 
-        .text-app-goog {
-            color: $color-black;
-            text-align: right;
-            font-family: $font-helvetica-neue;
-            font-size: 20px;
-            font-weight: 400;
-            line-height: 32px;
-        }
-    }
-
-}
 
 
 .log-in {
@@ -153,9 +98,4 @@ fieldset legend {
             color: $color-purple;
         }
     }
-}
-
-.down {
-    margin: 40px auto 120px auto;
-    text-align: center;
 }
