--- a/src/pages/Checkout/components/Accordion/AccordionCheckout.scss
+++ b/src/pages/Checkout/components/Accordion/AccordionCheckout.scss
@@ -11,7 +11,6 @@
     font-size: 16px;
     font-weight: 700;
     width: 100%;
-    border: 10px;
 }
 
 .item-btn {
@@ -26,4 +25,19 @@
     background-color: transparent;
     border: 1px solid $color-grey;
     border-radius: 10px;
+}
+
+.item-btn-expanded {
+    border-radius: 10px 10px 0 0;
+    border-bottom: none;
+}
+
+.item-btn-expanded .arrow {
+    transform: rotate(180deg);
+}
+
+.item-panel {
+    padding: 24px;
+    border: 1px solid $color-grey;
+    border-radius: 0 0 10px 10px;
 }
