moved input and rename variable

--- a/src/pages/LogIn/components/ContinueWith/ContinueWith.scss
+++ b/src/pages/LogIn/components/ContinueWith/ContinueWith.scss
@@ -26,7 +26,7 @@
         gap: 16px;
         margin-top: 40px;
 
-        .butt {
+        .button-icon {
             display: flex;
             width: 100%;
             padding: 12px 8px;
