--- a/src/pages/Checkout/components/Accordion/AccordionCheckout.scss
+++ b/src/pages/Checkout/components/Accordion/AccordionCheckout.scss
@@ -19,7 +19,6 @@
     align-items: center;
     width: 100%;
     margin: 0;
-    padding: 1rem;
     font-size: 1rem;
     text-align: left;
     background-color: transparent;
@@ -38,6 +37,14 @@
 
 .item-panel {
     padding: 24px;
-    border: 1px solid $color-grey;
+    border-right: 1px solid $color-grey;
+    border-left: 1px solid $color-grey;
+    border-bottom: 1px solid $color-grey;
     border-radius: 0 0 10px 10px;
+}
+
+.divider {
+    height: 1px;
+    background-color: $color-grey;
+    margin: 0 24px;
 }
