--- a/src/components/InputText/InputText.scss
+++ b/src/components/InputText/InputText.scss
@@ -1,43 +1,42 @@
-@import "@src/variables";
+@import '@src/variables';
 
-#InputText{
-    fieldset {
-            font-size: 12px;
-            border: solid 2px black;
-            border-radius: 10px;
-            margin: 32px 0 16px 0;  
-        }
-    
-        fieldset legend {
-            padding: 0 18px 0 18px;
-            text-align: left;
-            font-family: $font-helvetica-neue;
-            font-size: 12px;
-            font-weight: 500;
-            line-height: 14px;
-            color: $color-grey-3;
-        }
+.input-group {
+    width: 100%;
+    position: relative;
+    border-radius: 10px;
+    margin: 32px;
+}
 
-        .table {
-            padding: 16px 16px 16px 16px;
-            display: flex;
-            justify-content: space-between;
-            font-family: $font-helvetica-neue;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 26px;
-        }
-        .left-column{
-            border: none;
-            
-        }
-        
-        .left-column:focus {
-            outline: none !important;
-        }
+.input-group input {
+    padding: 16px;
+    border: 2px solid black;
+    background-color: transparent;
+    border-radius: 10px;
+    width: 100%;
+    font-size: 16px;
+}
 
-        .right-column{
-            display: none;
-        }
-        
+.input-group label {
+    position: absolute;
+    background-color: transparent;
+    padding: 16px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    color: $color-grey-3;
+    cursor: text;
+}
+
+.input-group:hover label {
+    color: $color-purple;
+}
+
+.input-group:focus-within label,
+.input-group input:not(:placeholder-shown)~label {
+    padding: 0px 8px;
+    background-color: $color-white;
+    top: -12px;
+    left: 16px;
+    bottom: auto;
+    color: $color-grey-3;
 }
