--- a/src/components/InputText/InputText.scss
+++ b/src/components/InputText/InputText.scss
@@ -4,12 +4,12 @@
     width: 100%;
     position: relative;
     border-radius: 10px;
-    margin: 32px;
+    display: flex;
 }
 
 .input-group input {
     padding: 16px;
-    border: 2px solid black;
+    border: 2px solid $color-black;
     background-color: transparent;
     border-radius: 10px;
     width: 100%;
@@ -39,4 +39,16 @@
     left: 16px;
     bottom: auto;
     color: $color-grey-3;
+}
+
+.icon {
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.required {
+    color: $color-red;
+    padding-left: 5px;
 }
