--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -1,6 +1,6 @@
 @import '@src/variables';
 
-/*#checkbox {
+#checkbox {
     position: absolute;
     z-index: -1;
     opacity: 0;
@@ -15,13 +15,11 @@
 #checkbox+label::before {
     content: '';
     display: inline-block;
-    width: 1em;
-    height: 1em;
     flex-shrink: 0;
     flex-grow: 0;
     border: 2px solid $color-dark-2;
     border-radius: 4px;
-    margin-right: 0.5em;
+    margin-right: 15px;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 50% 50%;
@@ -37,4 +35,4 @@
 
 #checkbox:not(:disabled):active+label::before {
     border-color: $color-purple;
-}*/
+}
