--- a/src/components/InputText/InputText.scss
+++ b/src/components/InputText/InputText.scss
@@ -5,52 +5,51 @@
     position: relative;
     border-radius: 10px;
     display: flex;
+}
 
+.input-group input {
+    padding: 16px;
+    border: 2px solid $color-black;
+    background-color: transparent;
+    border-radius: 10px;
+    width: 100%;
+    font-size: 16px;
+}
 
-    input {
-        padding: 16px;
-        border: 2px solid $color-black;
-        background-color: transparent;
-        border-radius: 10px;
-        width: 100%;
-        font-size: 16px;
-    }
+.input-group label {
+    position: absolute;
+    background-color: transparent;
+    padding: 16px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    color: $color-grey-3;
+    cursor: text;
+}
 
-    label {
-        position: absolute;
-        background-color: transparent;
-        padding: 16px;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        color: $color-grey-3;
-        cursor: text;
-    }
+.input-group:hover label {
+    color: $color-purple;
+}
 
-    :hover label {
-        color: $color-purple;
-    }
+.input-group:focus-within label,
+.input-group input:not(:placeholder-shown)~label {
+    padding: 0px 8px;
+    background-color: $color-white;
+    top: -12px;
+    left: 16px;
+    bottom: auto;
+    color: $color-grey-3;
+    transition: 150ms;
+}
 
-    :focus-within label,
-    input:not(:placeholder-shown)~label {
-        padding: 0px 8px;
-        background-color: $color-white;
-        top: -12px;
-        left: 16px;
-        bottom: auto;
-        color: $color-grey-3;
-        transition: 150ms;
-    }
+.icon-img {
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
-    .icon-img {
-        position: absolute;
-        right: 16px;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-    .required {
-        color: $color-red;
-        padding-left: 5px;
-    }
+.required {
+    color: $color-red;
+    padding-left: 5px;
 }
