--- a/src/pages/CreateNFT/CreateNFT.scss
+++ b/src/pages/CreateNFT/CreateNFT.scss
@@ -19,6 +19,19 @@
 
         .checkbox {
             margin-bottom: 40px;
+            height: 24px;
+
+            label::before {
+                height: 24px;
+                width: 24px;
+            }
+
+            label {
+                color: $color-grey-3;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 22px;
+            }
         }
 
         #name {
@@ -39,7 +52,7 @@
         }
 
         .types-allowed {
-            margin-bottom: 16px;
+            margin-bottom: 10px;
             color: $color-grey-3;
             font-size: 14px;
             font-weight: 400;
@@ -55,7 +68,8 @@
         }
 
         .drop-area {
-            border: 2px dashed #7b61ff40;
+            border: 2px dashed $color-purple;
+            opacity: 0.25;
             border-radius: 10px;
             height: 231px;
             display: flex;
