--- a/src/Application.scss
+++ b/src/Application.scss
@@ -38,3 +38,9 @@ h2 {
         display: none !important;
     }
 }
+
+@media (min-width: 850px) {
+    .mobile-only {
+        display: none !important;
+    }
+}
