--- a/src/components/Footer/components/Subscribe/Subscribe.scss
+++ b/src/components/Footer/components/Subscribe/Subscribe.scss
@@ -1,108 +1,21 @@
 @import "@src/variables";
 
 .subscribe {
-    margin-top: 40px;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
     gap: 24px;
 
     .label {
-        width: 190px;
-
-        .btn {
-            width: 190px;
-            height: 26px;
+        span {
             color: $color-black;
-            font-variant-numeric: lining-nums proportional-nums;
             font-size: 16px;
             font-weight: 700;
             line-height: 26px;
-            text-transform: capitalize;
             background: $color-white;
-            padding: 10px;
-            text-align: center;
-            text-decoration: none;
-            border: none;
-            padding: 0;
         }
     }
 
-    .block {
-        display: flex;
-        width: 420px;
-        flex-direction: column;
-        align-items: flex-start;
-
-        .root {
-            display: flex;
-            padding-left: 0px;
-            flex-direction: column;
-            align-items: flex-start;
-            align-self: stretch;
-            border-radius: 10px;
-            border: 2px solid $color-dark-2;
-
-            .label {
-                display: flex;
-                height: 2px;
-                padding: 0px 8px 2px 8px;
-                align-items: center;
-                gap: 10px;
-                background: $color-white;
-
-                .text {
-                    display: flex;
-                    align-items: center;
-                    color: $color-grey-3;
-                    font-variant-numeric: lining-nums proportional-nums;
-                    font-size: 12px;
-                    font-weight: 500;
-                    line-height: 14px;
-                }
-            }
-
-            .base {
-                display: inline-flex;
-                flex-direction: row;
-                padding: 0px 16px 0px 8px;
-                align-items: center;
-                gap: 8px;
-                align-self: stretch;
-
-                .input {
-                    display: flex;
-                    padding: 16px 0px;
-                    align-items: center;
-                    gap: 10px;
-                    flex: 1 0 0;
-                    color: $color-dark-2;
-                    font-variant-numeric: lining-nums proportional-nums;
-                    font-size: 14px;
-                    font-weight: 400;
-                    line-height: 22px;
-                    border: none;
-                    text-decoration: none;
-                }
-
-                .btn {
-                    background: none;
-                    border: none;
-
-                    .adornment {
-                        display: flex;
-                        flex-direction: column;
-                        align-items: flex-start;
-
-
-                        .send {
-                            width: 16px;
-                            height: 16px;
-                        }
-                    }
-                }
-            }
-        }
+    .input-group {
+        height: 56px;
     }
 }
