--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -6,6 +6,11 @@
     align-items: center;
     margin-bottom: 70px;
 
+    .video-block {
+        width: 734px;
+        height: 412px;
+    }
+
     iframe {
         border-radius: 10px;
     }
@@ -22,5 +27,32 @@
         line-height: 32px;
         opacity: 0.7;
         margin-bottom: 40px;
+    }
+}
+
+@media (max-width: 850px) {
+    .video {
+        padding: 0 25px 0 25px;
+        margin-bottom: 48px;
+        justify-content: center;
+
+        iframe {
+            border-radius: 10px;
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 16px;
+        }
+
+        span {
+            text-align: center;
+            margin-bottom: 32px;
+        }
+
+        .video-block {
+            width: 100%;
+            height: 191px;
+        }
     }
 }
