--- a/src/pages/CreateNFT/CreateNFT.scss
+++ b/src/pages/CreateNFT/CreateNFT.scss
@@ -90,6 +90,13 @@
             line-height: 22px;
         }
 
+        .input-group {
+            textarea {
+                height: 145px;
+                margin-bottom: 32px;
+            }
+        }
+
         .checkbox {
             margin-bottom: 41px;
         }
