--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -51,7 +51,7 @@
 
 @media (max-width: 850px) {
     .footer {
-        padding: 0 24px 0 24px;
+        padding: 0 24px;
         flex-direction: column;
         padding-bottom: 24px;
 
