--- a/src/pages/CreateNFT/CreateNFT.scss
+++ b/src/pages/CreateNFT/CreateNFT.scss
@@ -1,9 +1,9 @@
 @import '@src/variables';
 
 .create-nft-page {
-    margin-bottom: 120px;
     margin-top: 40px;
-    padding: 0 150px;
+    max-width: 1140px;
+    margin: 0 auto 120px auto;
 
     h2 {
         margin-bottom: 40px;
