--- a/src/components/InputText/InputText.scss
+++ b/src/components/InputText/InputText.scss
@@ -16,6 +16,11 @@
     font-size: 16px;
 }
 
+
+.grey input {
+    border: 2px solid $color-grey-3;  
+}
+
 .input-group label {
     position: absolute;
     background-color: transparent;
