--- a/src/components/Inputs/Input.scss
+++ b/src/components/Inputs/Input.scss
@@ -7,15 +7,6 @@
     display: flex;
 }
 
-.input-group input {
-    padding: 16px;
-    border: 2px solid $color-black;
-    background-color: transparent;
-    border-radius: 10px;
-    width: 100%;
-    font-size: 16px;
-}
-
 .input-group label {
     position: absolute;
     background-color: transparent;
@@ -25,6 +16,15 @@
     bottom: 0;
     color: $color-grey-3;
     cursor: text;
+}
+
+.input-group-input {
+    padding: 16px;
+    border: 2px solid $color-black;
+    background-color: transparent;
+    border-radius: 10px;
+    width: 100%;
+    font-size: 16px;
 }
 
 .input-group:hover label {
@@ -61,13 +61,6 @@ textarea {
     bottom: auto;
     color: $color-grey-3;
     transition: 150ms;
-}
-
-.input-right {
-    position: absolute;
-    right: 16px;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 .required {
