feat: added components

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -9,6 +9,7 @@ $color-dark-2: #191B23;
 $color-dark-additional: #3B5266;
 $color-grey-light: #d3d3d3;
 $color-grey: #ebedf2;
+$color-light-grey: #fafafa;
 $color-grey-3: #828282;
 $color-grey-4: #646464;
 $color-purple: #7B61FF;
