--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -5,9 +5,10 @@
     display: flex;
     position: relative;
     padding-left: 52px;
-    margin-bottom: 12px;
     cursor: pointer;
     font-size: 14px;
+    text-align: center;
+    align-items: center;
 }
 
 
