--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,4 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
 }
