--- a/src/Application.scss
+++ b/src/Application.scss
@@ -33,6 +33,10 @@ h2 {
     border: 0;
 }
 
+button {
+    cursor: pointer;
+}
+
 @media (max-width: 850px) {
     .desktop-only {
         display: none !important;
