--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
     align-items: center;
 
     .background {
-        background-color: $color-white;
+        background-color: transparent;
         border: 0;
     }
 
@@ -19,29 +19,39 @@
     .right {
         gap: 60px;
     }
+
+        .column {
+            display: flex;
+            align-items: center;
+        }
+    
+        .sign-in {
+            text-align: center;
+            font-size: 14px;
+            line-height: 26px;
+            font-weight: 500;
+            font-family: $font-helvetica-neue;
+            color: $color-black;
+            text-decoration-line: underline;
+        }
+    
+        .icon {
+            display: flex;
+            gap: 16px;
+        }
+    
+        .burger {
+            position: relative;
+            right: 35px;
+            bottom: 14px;
+        }
 }
 
-.column {
-    display: flex;
-    align-items: center;
-}
+@media (min-width: 1550px) {
 
-.sign-in {
-    text-align: center;
-    font-size: 14px;
-    line-height: 26px;
-    font-weight: 500;
-    font-family: $font-helvetica-neue;
-    color: $color-black;
-}
+    .ellipse{
+        border: 1px solid $color-black;
+        border-radius: 50%;
+    }   
 
-.icon {
-    display: flex;
-    gap: 16px;
-}
-
-.burger {
-    position: relative;
-    right: 35px;
-    bottom: 14px;
 }
