--- a/src/components/Sellers/Sellers.scss
+++ b/src/components/Sellers/Sellers.scss
@@ -3,7 +3,7 @@
 .sellers-section {
     width: 1142px;
 
-    margin-bottom: 70px;
+    margin: 0 auto 70px auto;
 
     .sellers-section-header {
         display: flex;
