--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,5 @@
 .home-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    max-width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
 }
