--- a/src/components/Cards/HeaderCard/HeaderCard.scss
+++ b/src/components/Cards/HeaderCard/HeaderCard.scss
@@ -22,8 +22,21 @@
         position: relative;
         left: 100px;
         bottom: 240px;
-    }    
-        
+    }
+
+    .ava-left{
+        width: 86px;
+        height: 86px;
+        flex-shrink: 0;
+        border-radius: 86px;
+    }
+
+    .main-foto{
+        width: 705px;
+        height: 900px;
+        flex-shrink: 0;        
+    }
+
     .ava-right {
         color: $color-white;
         font-size: 40px;
