--- a/src/components/Inputs/Input.scss
+++ b/src/components/Inputs/Input.scss
@@ -7,6 +7,12 @@
     display: flex;
 }
 
+.opacity-refferal {
+    opacity: 0.3;
+}
+
+
+
 .input-group label {
     position: absolute;
     background-color: transparent;
