--- a/src/components/ButtonBox/ButtonBox.scss
+++ b/src/components/ButtonBox/ButtonBox.scss
@@ -2,3 +2,11 @@ button {
     background: inherit;
     border: 0;
 }
+
+
+button:disabled,
+button[disabled] {
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+}
