--- a/src/components/Cart/components/CartModal/CartModal.scss
+++ b/src/components/Cart/components/CartModal/CartModal.scss
@@ -28,4 +28,12 @@
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         font-weight: 700;
     }
+
+    .empty-cart {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        font-weight: 700;
+    }
 }
