--- a/src/pages/Welcome/Welcome.scss
+++ b/src/pages/Welcome/Welcome.scss
@@ -1,18 +1,17 @@
 @import "@src/variables";
 
 .welcome {
-    width: 100%;
-    display: inline-flex;
+    max-width: 1140px;
+    margin: 0 auto 126px auto;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
-    z-index: 1;
-    gap: clamp(2%, 112px, 10%);
-    overflow: hidden;
+    gap: 112px;
+    align-items: center;
 
     .delimiter {
         display: flex;
         position: relative;
-        margin-top: 40px;
         height: 584px;
         width: 1px;
         flex-shrink: 0;
@@ -22,31 +21,5 @@
         border: 1px;
         z-index: 2;
         background: $color-black;
-    }
-
-    .left {
-        display: flex;
-        position: relative;
-        justify-content: center;
-        margin-left: clamp(2%, 112px, 10%);
-        height: 750px;
-        width: 100%;
-    }
-
-    .right {
-        display: flex;
-        position: relative;
-        justify-content: center;
-        height: 750px;
-        width: 100%;
-    }
-
-    .background {
-        width: 100%;
-        height: 100%;
-        flex-shrink: 0;
-        position: absolute;
-        background: $color-white;
-        z-index: 0;
     }
 }
