--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,25 +1,20 @@
 @import "@src/variables";
 
+.footer-delimiter {
+    width: 100%;
+}
+
+.footer-container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 .footer {
     display: inline-flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
-    flex-shrink: 0;
-    z-index: 2;
     padding-bottom: 56px;
-
-    .delimiter {
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        flex-shrink: 0;
-        z-index: 2;
-
-        path {
-            fill: $color-grey;
-        }
-    }
+    align-items: center;
 
     .left {
         margin-top: 61px;
