--- a/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
+++ b/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
@@ -2,13 +2,6 @@
 
 
 #EmailPassword {
-    .left-block {
-        width: 450px;
-        margin: 0 110px 0 auto;
-    }
-
-
-
     .text {
         margin-bottom: 8px;
         font-family: $font-helvetica-neue;
@@ -22,12 +15,9 @@
     }
 
     .text-down {
-        margin: 40px auto 120px auto;
+        margin: 40px auto 0 auto;
         text-align: center;
     }
-
-
-
 
     .button-fill {
         margin-top: 32px;
