--- a/src/pages/LogIn/LogIn.scss
+++ b/src/pages/LogIn/LogIn.scss
@@ -1,5 +1,6 @@
 .login-section {
     display: flex;
     max-width: 1140px;
-    margin: 40px auto 0 auto;
+    margin: 40px auto 120px auto;
+    justify-content: space-between;
 }
