--- a/src/components/Cards/HeaderCard/HeaderCard.scss
+++ b/src/components/Cards/HeaderCard/HeaderCard.scss
@@ -1,13 +1,12 @@
 @import '@src/variables';
 
 
-#header-card{
+#header-card {
     display: flex;
-    justify-content: right;
     position: relative;
     bottom: 210px;
     height: 900px;
-    width: 705px; 
+    justify-content: space-between;
 
     .header-card-index {
         position: relative;
@@ -24,17 +23,17 @@
         bottom: 240px;
     }
 
-    .ava-left{
+    .ava-left {
         width: 86px;
         height: 86px;
         flex-shrink: 0;
         border-radius: 86px;
     }
 
-    .main-foto{
-        width: 705px;
+    .main-foto {
+        width: 100%;
         height: 900px;
-        flex-shrink: 0;        
+        object-fit: cover;
     }
 
     .ava-right {
@@ -75,11 +74,11 @@
     }
 
     .arrow-switch {
+        position: absolute;
+        bottom: 100px;
+        right: 100px;
         display: flex;
         gap: 16px;
-        position: relative;
-        left: 439px;
-        bottom: 260px;
     }
 
     .circle-big {
