--- a/src/components/Sellers/Sellers.scss
+++ b/src/components/Sellers/Sellers.scss
@@ -1,8 +1,7 @@
 @import '@src/variables';
 
 .sellers-section {
-    width: 1142px;
-
+    max-width: 1142px;
     margin: 0 auto 70px auto;
 
     .sellers-section-header {
@@ -20,7 +19,6 @@
         display: flex;
         gap: 8px;
         align-items: center;
-
         color: $color-black;
         font-size: 14px;
         font-weight: 500;
@@ -30,7 +28,9 @@
 
     .seller-cards {
         display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: repeat(2, 1fr);
         column-gap: 30px;
         row-gap: 16px;
     }
