--- a/src/pages/Home/components/Hero/Hero.scss
+++ b/src/pages/Home/components/Hero/Hero.scss
@@ -2,21 +2,14 @@
 
 
 #home-page-container {
-    margin: 0 auto;
     display: flex;
-    height: 900px;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 0 0 auto;
     max-width: 1140px;
 
-    .container {
-        display: grid;
-        grid-template-columns: 45% 65%;
-        margin-top: 150px;
-        align-self: center;
-        width: 100%;
-        gap: 60px;
-    }
-
     .home-page-header {
+        width: 50%;
 
         .left {
             display: flex;
@@ -118,6 +111,10 @@
             line-height: 32px;
             text-decoration-line: underline;
             cursor: pointer;
+        }
+
+        .photo-section {
+            width: 50%;
         }
     }
 }
