--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,8 +5,10 @@
 }
 
 .footer-container {
-    max-width: 1140px;
-    margin: 0 auto;
+    max-width: 1440px;
+    display: flex;
+    justify-content: center;
+    margin: 0 5%;
 }
 
 .footer {
