--- a/src/pages/Home/components/Hero/Hero.scss
+++ b/src/pages/Home/components/Hero/Hero.scss
@@ -3,19 +3,18 @@
 
 #home-page-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0 0 0 auto;
-    max-width: 1140px;
+    margin: 0 0 0 7%;
+    gap: 100px;
 
     .home-page-header {
-        width: 50%;
+        width: 40%;
 
         .left {
             display: flex;
             flex-direction: column;
             gap: 40px;
             align-items: center;
+            justify-content: center;
         }
 
         .main-text {
@@ -112,9 +111,9 @@
             text-decoration-line: underline;
             cursor: pointer;
         }
+    }
 
-        .photo-section {
-            width: 50%;
-        }
+    .photo-section {
+        width: 60%;
     }
 }
