--- a/src/components/Inputs/Select/Select.scss
+++ b/src/components/Inputs/Select/Select.scss
@@ -1,13 +1,27 @@
 @import '@src/variables';
 
-.input-select {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    background-image: url("./assets/arrow.svg");
-    background-repeat: no-repeat;
-    background-position: calc(100% - 15px) center;
-    outline: none;
-    cursor: pointer;
+
+.select {
+
+    .input-select {
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        -ms-appearance: none;
+        background-image: url("./assets/arrow.svg");
+        background-repeat: no-repeat;
+        background-position: calc(100% - 15px) center;
+        outline: none;
+        cursor: pointer;
+    }
+
+    .input-group label {
+        padding: 0px 8px;
+        background-color: $color-white;
+        top: -12px;
+        left: 16px;
+        bottom: auto;
+        color: $color-grey-3;
+        transition: 150ms;
+    }
 }
