--- a/src/components/Cards/SellerCard/SellerCard.scss
+++ b/src/components/Cards/SellerCard/SellerCard.scss
@@ -15,6 +15,7 @@
         gap: 10px;
 
         .number {
+            width: 23px;
             color: $color-dark-2;
             font-size: 20px;
             font-weight: 400;
