--- a/src/components/Switch/Switch.scss
+++ b/src/components/Switch/Switch.scss
@@ -18,26 +18,24 @@
         align-items: center;
         justify-content: center;
         border-radius: 10px;
+        color: $color-dark-2;
 
         &.active {
-            background-color: $color-purple;
+            .switch-button {
+                color: $color-white;
+                font-weight: 700;
+                background-color: $color-purple;
+            }
         }
 
         .switch-button {
             padding: 0 19px;
-            color: $color-dark-2;
             font-size: 14px;
             font-weight: 400;
             height: 100%;
             width: 100%;
             border-radius: 10px;
             border: 0;
-
-            &.active {
-                color: $color-white;
-                font-weight: 700;
-                background-color: $color-purple;
-            }
         }
     }
 }
