--- a/src/pages/Home/components/Hero/Hero.scss
+++ b/src/pages/Home/components/Hero/Hero.scss
@@ -6,6 +6,7 @@
     display: flex;
     height: 900px;
     max-width: 1140px;
+    gap: 100px;
 
     .container {
         display: grid;
@@ -17,7 +18,6 @@
     }
 
     .home-page-header {
-
         .left {
             display: flex;
             flex-direction: column;
@@ -76,6 +76,7 @@
             border-radius: 10px;
             border: 0;
             background: $color-purple;
+            text-align: center;
             cursor: pointer;
 
             .text-b {
