--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -13,11 +13,12 @@
 }
 
 .profile-section {
-    max-width: 1140px;
     display: flex;
-    margin: 0 auto 70px auto;
     gap: 29px;
-    justify-content: space-between;
+
+    margin-right: 150px;
+    margin-left: 150px;
+    margin-bottom: 70px;
 
     .profile-section-left-part {
         position: relative;
