--- a/src/components/Sellers/Sellers.scss
+++ b/src/components/Sellers/Sellers.scss
@@ -24,6 +24,7 @@
         color: $color-black;
         font-size: 14px;
         font-weight: 500;
+        line-height: 26px;
         text-decoration: underline;
     }
 
