--- a/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
+++ b/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
@@ -1,10 +1,13 @@
 @import "@src/variables";
 
+
 #EmailPassword {
     .left-block {
         width: 450px;
         margin: 0 110px 0 auto;
     }
+
+
 
     .text {
         margin-bottom: 8px;
@@ -23,6 +26,9 @@
         text-align: center;
     }
 
+
+
+
     .button-fill {
         margin-top: 32px;
         width: 100%;
@@ -30,6 +36,7 @@
         border-radius: 10px;
         border: 0;
         background: $color-purple;
+
 
         .text-b {
             margin: 0 auto;
@@ -41,6 +48,10 @@
         }
     }
 
+
+
+
+
     .log-in {
         margin-left: 110px;
         margin-top: 40px;
@@ -48,6 +59,7 @@
         height: 22px;
 
         .text {
+            // color: $color-gray-3;
             text-align: center;
             font-variant-numeric: lining-nums proportional-nums;
             font-family: $font-helvetica-neue;
